Fix overflow error and add tooltip at the beginning

--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,7 @@
 html {
     scroll-behavior: smooth !important;
     width: 100vw !important;
+    overflow-x: clip !important;
 }
 
 @font-face {
@@ -21,7 +22,7 @@ body {
     font-family: 'Josefin Sans', sans-serif !important;
     padding: 0 !important;
     width: 100% !important;
-    overflow-x: hidden !important;
+    overflow-x: clip !important;
 }
 
 i {
